--- a/src/main/resources/se_prototype/se_prototype/menu.fxml
+++ b/src/main/resources/se_prototype/se_prototype/menu.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
-
 <?import javafx.scene.control.Button?>
+
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="se_prototype.se_prototype.MenuController"
             prefWidth="400"
             prefHeight="711"
-            style="-fx-background-color: #F5F5F5;">
+            style="-fx-background-color: #F5F5F5; -fx-font-family: Arial">
 
     <!-- Top Section -->
     <top>
