--- a/src/main/resources/se_prototype/se_prototype/message.fxml
+++ b/src/main/resources/se_prototype/se_prototype/message.fxml
@@ -13,7 +13,7 @@
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="se_prototype.se_prototype.MessageController"
             prefHeight="600.0" prefWidth="400.0"
-            style="-fx-background-color: #F5F5F5;">
+            style="-fx-background-color: #F5F5F5; -fx-font-family: Arial">
 
     <!-- Top Section -->
     <top>
