--- a/src/main/resources/se_prototype/se_prototype/cart.fxml
+++ b/src/main/resources/se_prototype/se_prototype/cart.fxml
@@ -11,6 +11,7 @@
 <StackPane xmlns="http://javafx.com/javafx"
            xmlns:fx="http://javafx.com/fxml"
            fx:controller="se_prototype.se_prototype.CartController"
+           fx:id="screen"
            prefWidth="400"
            prefHeight="711"
            style="-fx-background-color: #F5F5F5;  -fx-font-family: Arial">
@@ -194,15 +195,13 @@
                         <!-- Product List Header -->
                         <Label text="Group Cart" style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: #37474F; -fx-padding: 0 0 0 7"/>
 
+                        <!-- Timer Display -->
+                        <Label fx:id="timerLabel" text="Time Remaining: 60:00"
+                               style="-fx-font-size: 14px; -fx-font-weight: bold; -fx-text-fill: #FF6B6B;" />
+
                         <!-- Scrollable Product List -->
                         <VBox fx:id="groupUsersContainer" spacing="10"
                               style="-fx-padding: 10; -fx-spacing: 15;" />
-
-                        <!-- Add More Products Button -->
-                        <VBox alignment="CENTER" style="-fx-padding: 10;">
-                            <Button text="Add More Product" prefWidth="350" fx:id="addMoreItems_group"
-                                    style="-fx-background-color: #E8F5E9; -fx-text-fill: #5EC401; -fx-font-size: 14px; -fx-font-weight: bold; -fx-border-radius: 8; -fx-padding: 10; -fx-background-radius: 8; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 5, 0, 0, 0); -fx-border-color: #5EC401" />
-                        </VBox>
 
                         <!-- Delivery Location -->
                         <VBox style="-fx-background-color: white; -fx-border-radius: 16; -fx-padding: 20; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 5, 0, 0, 0); -fx-background-radius: 16"
@@ -210,7 +209,6 @@
                             <HBox alignment="CENTER_LEFT" spacing="10">
                                 <Label text="Delivery Location" style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: #37474F;" />
                                 <Region prefWidth="100" />
-                                <Hyperlink alignment="CENTER_RIGHT" text="Change" style="-fx-font-size: 14px; -fx-text-fill: #5EC401;" fx:id="change_location_group"/>
                             </HBox>
                             <HBox alignment="CENTER_LEFT" spacing="10" style="-fx-padding: 5 0;">
                                 <StackPane>
